--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <header>
 	<a href="https://Google.com">Gmail</a>
 	<a href="https://Google.com">Images</a>
-	<a href="https://Google.com"><img src="/home/charalambos/Documents/odin projects/HTML/GoogleEasy/Goggle2/Googleappspng" title="Google apps"></a>
+	<a href="https://Google.com"><img src="https://github.com/Charalamboss/GoogleHomepage/blob/master/Googleappspng" title="Google apps"></a>
 	<button type="button">Sign in </button>
 </header>
 
