--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="main">
 		<a href="https://wwww.Google.com ">
-			<img src="https://github.com/Charalamboss/GoogleHomepage/blob/master/google">
+			<img src="Goggle2/google">
 		</a>
 		<form>
 			<input type="text" name="bar">
